fix(sass): 🛠️ Resolve Sass `@import` deprecation warning by using `@use` and namespacing variables.

--- a/rubycon.it/assets/css/style.scss
+++ b/rubycon.it/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "variables.scss";
+@use "variables";
 
 * {
     margin: 0;
@@ -17,22 +17,22 @@ body{
     text-transform: lowercase;
     font-size: 16px;
     line-height: 1.5;
-    color: $body-text-color;
+    color: variables.$body-text-color;
 }
 section{
     scroll-margin-top: 80px;
 }
 section:nth-of-type(odd):not(#newsletter), footer {
-    background: $background-primary;
+    background: variables.$background-primary;
 }
 section:nth-of-type(even), header, #newsletter, .mobile-menu{
-    background-color: $background-secondary;
+    background-color: variables.$background-secondary;
 }
 section:nth-of-type(odd):not(#newsletter){
     color: white;
 }
 .speaker-card{
-    background-color: $background-secondary;
+    background-color: variables.$background-secondary;
 }
 .speaker-card:hover {
     transform: translateY(-10px);
